ha/chart-apps/templates/ha-ingress.yaml
#Ingress to expose the service outside the cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: ha
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /ha(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ha-app
                port:
                  number: 80
